--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,21 @@
-.App {
-  text-align: center;
+.center {
+  align-self: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+ul {
+  display: flex;
+  flex-direction: row;
+  width: auto;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+li {
+  list-style-type: none;
+  padding: 3em;
+}
+.middle-left {
+  padding-right: 10em;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.middle-right {
+  padding-left: 10em;
 }
